<resources>
    <string name="app_name">Memoir</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="create_account">Create an account</string>
    <string name="memoir_title">MEMOIR</string>
    <string name="test">Test</string>
    <string name="description">Description goes here</string>
    <string name="date_created">Date goes here</string>
    <string name="create_an_account">Create an account</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="all_posts">All Posts</string>
    <string name="add_post">Add Post</string>
    <string name="sign_out">Sign Out</string>
    <string name="post_title">Post Title</string>
    <string name="post_date">Post Date</string>
    <string name="save_post">Save Post</string>
    <string name="error_updating_profile">Error updating profile</string>
    <string name="sign_up_error_message">User Creation Failed</string>
    <string name="sign_up_success">User Created Successfully</string>
    <string name="please_fill_fields">Please fill out all the fields!</string>
    <string name="login_failed">Login Failed!!!</string>
    <string name="fill_and_select_image">Please fill in all fields and select an image.</string>
    <string name="go_back_to_sign_in">Go back to Sign In</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_valid_email">Please enter a valid email.</string>
    <string name="link_sent">Password reset link sent!</string>
    <string name="edit_button">Edit Button</string>
    <string name="delete_button">Delete Button</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="image_preview">Image preview</string>
    <string name="change_image">Change Image</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="post_not_found">Post not found!</string>
    <string name="error_no_post_id_provided">Error: No post ID provided</string>
    <string name="post_updated_successfully">Post updated successfully</string>
    <string name="title_and_description_cannot_be_empty">Title and description cannot be empty</string>
    <string name="are_you_sure_you_want_to_delete_this_post">Are you sure you want to delete this post?</string>
    <string name="welcome_to_the_app">Welcome to the App!</string>
    <string name="we_re_glad_to_have_you_here">We\'re glad to have you here.</string>
    <string name="notification_permission_denied">Notification permission denied</string>
    <string name="enter_the_verification_code_sent_to_your_email">Enter the verification code sent to your email</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend Code</string>
    <string name="_2fa">2FA</string>
    <string name="please_check_your_inbox">Verification email resent. Please check your inbox.</string>
    <string name="failed_to_resend_email">Failed to resend email. Please try again.</string>
    <string name="verification_failed">Verification failed. Please try again.</string>
    <string name="please_enter_the_verification_code">Please enter the verification code</string>
    <string name="failed_to_send_verification_email">Failed to send verification email.</string>
    <string name="invalid_verification_code_please_try_again">Invalid verification code. Please try again.</string>
    <string name="user_email_is_not_available">User email is not available.</string>
    <string name="user_not_authenticated">User not authenticated.</string>
    <string name="a_verification_code_has_been_sent_to_your_email">A verification code has been sent to your email.</string>
    <string name="failed_to_send_the_verification_email_please_try_again">Failed to send the verification email. Please try again.</string>
    <string name="failed_to_create_the_email_message">Failed to create the email message.</string>
    <string name="failed_to_get_user_email">Failed to get user email from FirebaseUser.</string>
    <string name="the_post_was_deleted_successfully">The post was deleted successfully!</string>
</resources>