<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8sp"
    app:cardElevation="8sp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:elevation="10sp"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/half_background"
            android:ellipsize="end"
            android:text="@string/test"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:padding="8dp"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:importantForAccessibility="no"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20sp"
            android:text="@string/test"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:paddingStart="10sp"
            android:paddingTop="16sp"
            android:paddingEnd="16sp"
            android:text="@string/description"
            android:textSize="18sp"
            android:textStyle="normal"
            android:visibility="visible" />

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingTop="20sp"
            android:paddingEnd="10sp"
            android:text="@string/date_created"
            android:textStyle="italic"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit_button"
            android:importantForAccessibility="yes"
            android:layout_margin="8dp"
            android:src="@android:drawable/ic_menu_edit"
            app:tint="#FFFFFF" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete_button"
            android:importantForAccessibility="yes"
            android:layout_margin="8dp"
            android:src="@android:drawable/ic_menu_delete"
            app:tint="#FFFFFF" />
    </LinearLayout>


</androidx.cardview.widget.CardView>